Made hostile all the neutral and passive entities at day 7.